added dgran drop

--- a/index.html
+++ b/index.html
@@ -8,7 +8,33 @@
 </head>
 <body>
     <div id="layout">
-        
+        <div id="container">
+            <div class="deck left" id="deck_0">
+                <div class="card" draggable="true" id="card1">Card 1</div>
+                <div class="card" draggable="true" id="card2">Card 2</div>
+                <div class="card" draggable="true" id="card3">Card 3</div>
+            </div>
+            <div id = 'targets'>
+                    <div class="target left" id="target1"></div>
+                    <div class="target left" id="target2"></div>
+                    <div class="target left" id="target3"></div>
+                    <div class="target left" id="target4"></div>
+                    <div class="target left" id="target5"></div>
+
+                    <div class="target right" id="target6"></div>
+                    <div class="target right" id="target7"></div>
+                    <div class="target right" id="target8"></div>
+                    <div class="target right" id="target9"></div>
+                    <div class="target right" id="target10"></div>
+
+            </div>
+            <div class="deck right" id="deck_1">
+                <div class="card" draggable="true" id="card4">Card 4</div>
+                <div class="card" draggable="true" id="card5">Card 5</div>
+                <div class="card" draggable="true" id="card6">Card 6</div>
+            </div>
+        </div>
+ 
         <div class="string">
             <div class = 'half'>
                 Левые
