before card logic

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div id="layout">
         <div id="container">
             <div class="deck left" id="deck_0">
-                <div class="card" draggable="true" id="card1">Card 1</div>
+                <!-- <div class="card" draggable="true" id="card1">Card 1</div>
                 <div class="card" draggable="true" id="card2">Card 2</div>
-                <div class="card" draggable="true" id="card3">Card 3</div>
+                <div class="card" draggable="true" id="card3">Card 3</div> -->
             </div>
             <div id = 'targets'>
                     <div class="target left" id="target1"></div>
@@ -29,9 +29,9 @@
 
             </div>
             <div class="deck right" id="deck_1">
-                <div class="card" draggable="true" id="card4">Card 4</div>
+                <!-- <div class="card" draggable="true" id="card4">Card 4</div>
                 <div class="card" draggable="true" id="card5">Card 5</div>
-                <div class="card" draggable="true" id="card6">Card 6</div>
+                <div class="card" draggable="true" id="card6">Card 6</div> -->
             </div>
         </div>
  
